# vidalicet

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  pyrightconfig.json  test.py
examples/: boost_pressure.ipynb
tools/: DumpEcuParams.ps1  create_db.py
vidalicet/: constants.py  reader.py
vidalicet/_bus/: __init__.py  _scaling.lark  _scaling.py  child_blocks.py  common.py  matching.py
vidalicet/_db/: __init__.py  _common.py  child_blocks.py  connection.py  matching.py
vidalicet/_log_parsing/: __init__.py  common.py  ecu_id.py  params.py
