[tool.poetry]
name = "vidalicet"
version = "0.1.0"
description = ""
authors = ["veikak"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
lark = "^1.1.9"

[tool.poetry.group.dev.dependencies]
seaborn = "^0.13.2"
ipython = "^8.23.0"
ipykernel = "^6.29.4"
pandas = "^2.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
